@@ -64,13 +64,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring.version>5.0.20.RELEASE</spring.version>
-        <sonar.projectKey>org.liquibase:liquibase-parent</sonar.projectKey>
-        <sonar.organization>liquibase-core</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
         <groovy.version>2.4.17</groovy.version>
         <dependency.spock.version>1.3-groovy-2.4</dependency.spock.version>
         <junit.version>4.12</junit.version>
+        <trimStackTrace>false</trimStackTrace>
     </properties>
 
 
@@ -275,26 +273,6 @@
                 </executions>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.jacoco</groupId>-->
-<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
-<!--                <version>0.8.5</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>prepare-agent</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>report</id>-->
-<!--                        <phase>test</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>report</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
@@ -444,7 +422,7 @@
             <properties>
                 <maven.compiler.release>8</maven.compiler.release>
                 <!-- CDILiquibaseTest is currently failing without this setting -->
-                <argLine>--illegal-access=permit</argLine>
+<!--                <argLine>&#45;&#45;illegal-access=permit</argLine>-->
             </properties>
         </profile>
         <profile>
@@ -457,6 +435,56 @@
             <modules>
                 <module>../liquibase-pro</module>
             </modules>
+        </profile>
+
+        <profile>
+            <id>sonar</id>
+            <properties>
+                <sonar.organization>liquibase</sonar.organization>
+                <sonar.projectKey>liquibase</sonar.projectKey>
+                <sonar.projectName>Liquibase</sonar.projectName>
+                <sonar.projectDescription>Liquibase</sonar.projectDescription>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.scm.provider>git</sonar.scm.provider>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                        <version>3.7.0.1746</version>
+                        <executions>
+                            <execution>
+                                <id>sonar</id>
+                                <goals>
+                                    <goal>sonar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.8.7</version>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
